Add support for multiple positions in the same org/company
Define 'cvtwoposentry' that accepts 2 positions & date-range
in the same company.
Takes 7 args: <pos1> <date1> <pos2> <date2> <org> <location> <description>

--- a/awesome-cv.cls
+++ b/awesome-cv.cls
@@ -577,6 +577,32 @@
   \end{tabular*}%
 }
 
+% Define an environment for cvtwoposentry
+\newenvironment{cvtwoposentries}{%
+  \vspace{\acvSectionContentTopSkip}
+  \begin{center}
+}{%
+  \end{center}
+}
+% Define an entry of cv information
+% Usage: \cventry{<position1>}{<date>}{<position2>}{<date>}{<title>}{<location>}{<description>}
+\newcommand*{\cvtwoposentry}[7]{%
+  \vspace{-2.0mm}
+  \setlength\tabcolsep{0pt}
+  \setlength{\extrarowheight}{0pt}
+  \begin{tabular*}{\textwidth}{@{\extracolsep{\fill}} L{\textwidth - 4.5cm} R{4.5cm}}
+    \ifempty{#3#4}
+      %{\entrypositionstyle{#1} & \entrydatestyle{#2} \\}
+      %{\entrypositionstyle{#3} & \entrydatestyle{#4} \\}
+      {\entrytitlestyle{#5} & \entrylocationstyle{#6} \\
+      \entrypositionstyle{#1} & \entrydatestyle{#2} \\}
+      {\entrytitlestyle{#5} & \entrylocationstyle{#6} \\
+      \entrypositionstyle{#1} & \entrydatestyle{#2} \\
+      \entrypositionstyle{#3} & \entrydatestyle{#4} \\}
+    \multicolumn{2}{L{\textwidth}}{\descriptionstyle{#7}}
+  \end{tabular*}%
+}
+
 % Define an environment for cvsubentry
 \newenvironment{cvsubentries}{%
   \begin{center}
