--- a/shibing-resume/resume.tex
+++ b/shibing-resume/resume.tex
@@ -77,8 +77,10 @@
 %	Each section is imported separately, open each file in turn to modify content
 %-------------------------------------------------------------------------------
 \input{resume/education.tex}
-%\input{resume/summary.tex}
 \input{resume/experience.tex}
+\input{resume/publications.tex}
+\input{resume/projects.tex}
+%\input{resume/summary.tex}
 %\input{resume/honors.tex}
 %\input{resume/presentation.tex}
 %\input{resume/writing.tex}
