Add to projects and skills

--- a/shibing-resume/resume/projects.tex
+++ b/shibing-resume/resume/projects.tex
@@ -67,6 +67,13 @@
         \item {A paper on the same was published in \textit{IEEE International Conference on Semantic Computing, 2015} }
       \end{cvitems}
     }
+  \majprojentry
+    {TicketSutra - Online marketplace for resale of tickets (Android application)}
+    {
+      \begin{cvitems} % Description(s) of experience/contributions/knowledge
+        \item {This started as a weekend project with a friend and we ended up publishing the app on \textbf{\href{https://play.google.com/store/apps/details?id=com.resale.ticketSutra&hl=en}{ Google PlayStore}} in 3 months. I  contributed more to  frontend (the "Android" part of the app), particularly the QRCode module of the application. Though the app didn't quite catch on, this was a fun project nevertheless \enspace - \enspace {\textbf{\href{https://medium.com/@ticketsutra/ticketsutra-is-now-online-1945c82a7c10}{Launch Blog on Medium}}}}
+      \end{cvitems}
+    }
     
 %---------------------------------------------------------
 
