--- a/shibing-resume/resume.tex
+++ b/shibing-resume/resume.tex
@@ -80,6 +80,7 @@
 \input{resume/experience.tex}
 \input{resume/publications.tex}
 \input{resume/projects.tex}
+\input{resume/skills.tex}
 %\input{resume/summary.tex}
 %\input{resume/honors.tex}
 %\input{resume/presentation.tex}
