--- a/shibing-resume/resume/publications.tex
+++ b/shibing-resume/resume/publications.tex
@@ -13,7 +13,7 @@
   \cventry
     {IEEE International Congress on Big Data, 2015} % Conference
     {Content Based Image Retrieval on Hadoop Framework} % Title
-    {New York} % Location
+    {New York City, NY} % Location
     {Aug, 2015} % Date(s)
     {
       \begin{cvitems} % Description(s)
